tests: RuleEngineLifecycleIntegrationTest refactored with async testing